--- a/frontend/components/ui/Breadcrumbs/index.scss
+++ b/frontend/components/ui/Breadcrumbs/index.scss
@@ -3,7 +3,7 @@
   align-items: center;
 }
 
-.title {
+.breadcrumbsTitle {
   font-size: 14px;
   color: #3b526d;
   text-decoration: none;
@@ -20,7 +20,7 @@
   }
 }
 
-.active {
+.breadcrumbsTitleActive {
   color: #7694b9;
 
   &::after {
