--- a/storybook/src/index.scss
+++ b/storybook/src/index.scss
@@ -43,3 +43,58 @@ pre {
   padding: 24px;
   width: 600px;
 }
+
+.nav {
+  position: fixed;
+  right: 16px;
+  top: 8px;
+}
+
+.navItem {
+  width: 42px;
+  height: 42px;
+  background-position: center;
+  border-radius: 60px;
+  background-repeat: no-repeat;
+  margin: 8px 0;
+  border: 2px solid #f4f5f7;
+  display: flex;
+}
+
+.navItemReact {
+  background-size: 65%;
+  background-image: url('./img/react.png');
+}
+
+.navItemVue {
+  background-size: 50%;
+  background-position: 50% 58%;
+  background-image: url('./img/vue.png');
+}
+
+.navItemSvelte {
+  background-size: 48%;
+  background-image: url('./img/svelte.png');
+}
+
+.navItemActive {
+  border-color: #3056da;
+}
+
+.sidebar {
+  width: 240px;
+  background-color: #f4f5f7;
+}
+
+.sidebarItem {
+  display: flex;
+  color: #000;
+  padding: 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.sidebarItemActive {
+  color: #fff;
+  background-color: #3155da;
+}
