--- a/packages/common/Loader/index.scss
+++ b/packages/common/Loader/index.scss
@@ -13,7 +13,7 @@
     &.s {
       border-width: 3px;
       border-style: solid;
-      border-color: #3155da transparent transparent transparent;
+      border-color: #7367f0 transparent transparent transparent;
       height: 20px;
       width: 20px;
     }
@@ -21,7 +21,7 @@
     &.m {
       border-width: 4px;
       border-style: solid;
-      border-color: #3155da transparent transparent transparent;
+      border-color: #7367f0 transparent transparent transparent;
       height: 32px;
       width: 32px;
     }
@@ -29,7 +29,7 @@
     &.l {
       border-width: 5px;
       border-style: solid;
-      border-color: #3155da transparent transparent transparent;
+      border-color: #7367f0 transparent transparent transparent;
       height: 48px;
       width: 48px;
     }
@@ -37,7 +37,7 @@
     &.xl {
       border-width: 6px;
       border-style: solid;
-      border-color: #3155da transparent transparent transparent;
+      border-color: #7367f0 transparent transparent transparent;
       height: 64px;
       width: 64px;
     }
@@ -110,7 +110,7 @@
   }
 
   .dotsChild {
-    background-color: #3155da;
+    background-color: #7367f0;
     border-radius: 100%;
     display: inline-block;
     animation: dots $animationDuration ease-in-out 0s infinite both;
