--- a/packages/common/Collapse/index.scss
+++ b/packages/common/Collapse/index.scss
@@ -1,16 +1,4 @@
 .collapse {
-  transition: 0.3s all;
   overflow: hidden;
-}
-
-.close {
-  opacity: 0;
-  position: absolute;
-  height: 0;
-  z-index: -1;
-}
-
-.open {
-  opacity: 1;
-  height: 0;
+  transition: height 200ms;
 }
