--- a/packages/common/Drawer/index.scss
+++ b/packages/common/Drawer/index.scss
@@ -1,4 +1,4 @@
-.case {
+.drawerCase {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -6,9 +6,10 @@
   top: 0;
   flex-direction: row;
   display: flex;
+  z-index: 999;
 }
 
-.overlay {
+.drawerOverlay {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -18,15 +19,28 @@
   top: 0;
 }
 
-.drawer {
-  width: 240px;
+.drawerFixed {
+  overflow: hidden;
   background-color: #ffffff;
   z-index: 999;
-  height: 100%;
   position: absolute;
-  transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  transition: all 300ms;
   box-shadow:
     0 8px 10px -5px rgba(0, 0, 0, 0.2),
     0 16px 24px 2px rgba(0, 0, 0, 0.14),
     0 6px 30px 5px rgba(0, 0, 0, 0.12);
+}
+
+.drawerStatic {
+  overflow: hidden;
+}
+
+.left, .right {
+  width: 240px;
+  height: 100%;
+}
+
+.top, .bottom {
+  width: 100%;
+  height: 240px;
 }
